##
## $Id$
##

ACLOCAL_AMFLAGS = -I ../aclocal

SUBDIRS = 	cache00 cache01 cache02 cache03 cache04 \
	cache05 cache06 cache07 cache08 cache09 \
	dijkstra00 dijkstra01 \
	mem00 mem01 mem02 mem03 mem04 \
	mem05 mem06 mem07 mem08 mem09 \
	spspin09 spspin08 spspin07 spspin06 spspin05 \
	spspin04 spspin03 spspin02 spspin01 spspin00


if CXXTESTS
SUBDIRS += astar00 astar01 astar02
endif


include $(top_srcdir)/../automake/subdirs.am
include $(top_srcdir)/../automake/local.am
